Fixed navbar not going full width on overflowing mobile pages

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -80,9 +80,7 @@ td {
 	align-content: stretch;
 	
 	background: black;
-	
-	width: 100%;
-	text-decoration: none;
+		text-decoration: none;
 
 }
 
